weakHashMapTest的使用